Search bar invisible bug fixed

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -83,10 +83,6 @@ $colors: (
    light:      #f4f4f4,  
    dark:          #222,
    black:       #000000,
-   whiteText: (
-     base: #ffffff,
-     contrast: #f4f4f4
-   )
 );
 
 
@@ -207,8 +203,8 @@ $colors: (
    */
 
   .md body {
-    --ion-background-color: #121212;
-    --ion-background-color-rgb: 18,18,18;
+    --ion-background-color: #000000;
+    --ion-background-color-rgb: 0,0,0;
 
     --ion-text-color: #ffffff;
     --ion-text-color-rgb: 255,255,255;
